function to generate next generation added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <table id="grid">
+    <h1>Generation <span id="generationNum"></span></h1>
     <tr>
         <th></th>
         <th>1</th>
@@ -48,6 +49,7 @@
     </tr>
 
 </table>
+<button id="nextGenBtn">Next Generation</button>
 </body>
 <script
         src="https://code.jquery.com/jquery-3.2.1.min.js"
