added loop and reset

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
 </table>
 <button id="nextGenBtn">Next Generation</button>
+<button id="loopGenerations">Loop generations</button>
+<button id="stopLoop">Stop Loop</button>
+<button id="reset">Reset</button>
 </body>
 <script
         src="https://code.jquery.com/jquery-3.2.1.min.js"
